# rss-aggregator

./: .gitignore  AGENTS.md  AUTHORS.txt  README  README.md  THANKS.txt  admin_cb.py  expunge.py  favicon.py  planet.py  publish.py  pyproject.toml  runtests.py  spider.py  splice.py
.github/workflows/: tests.yml
docs/: admin.html  admin.md  config.html  config.md  contributing.html  contributing.md  docs.js  etiquette.html  etiquette.md  filters.html  filters.md  index.html  index.md  installation.html  installation.md  migration.html  migration.md  normalization.html  normalization.md  output.html  output.md  templates.html
examples/: dyne-fediverse.ini  minimal.ini  opml-top100.ini  planet-schmanet.ini
filters/: addsearch.genshi  coral_cdn_filter.py  excerpt.py  mememe.plugin  minhead.py  regexp_sifter.py  xhtml2html.plugin  xpath_sifter.py
frontend/minimal/: README.md  index.html
planet/: __init__.py  config.py  csv_config.py  expunge.py  filtering.py  foaf.py  idindex.py  media.py  opml.py  output.py  publish.py  reconstitute.py  scrub.py  spider.py  splice.py  storage.py
planet/shell/: __init__.py  _genshi.py  dj.py  html.py  plugin.py  py.py  sed.py  tmpl.py  xslt.py
src/: __init__.py  config.py  expunge.py  filtering.py  idindex.py  lemmy.py  media.py  net.py  output.py  reconstitute.py  scrub.py  spider.py  splice.py  storage.py
tests/: reconstitute.py  test_apply.py  test_config.py  test_config_csv.py  test_docs.py  test_expunge.py  test_feedparser_compat.py  test_filter_django.py  test_filter_tmpl.py  test_filter_xslt.py  test_filters.py  test_foaf.py  test_idindex.py  test_lemmy.py  test_media.py  test_net.py  test_opml.py  test_output.py  test_publish.py  test_reconstitute.py  test_rlists.py  test_scrub.py  test_spider.py  test_splice.py  test_storage.py  test_subconfig.py
(+34 files in other folders)
