[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "venus"
version = "0.1.0"
description = "Planet feed aggregator and static site generator"
readme = "README"
requires-python = ">=3.9"
license = { file = "LICENCE" }
authors = [
  { name = "Venus contributors" }
]
dependencies = [
  "feedparser>=6,<7",
  "html5lib>=1.1,<2",
]

[tool.setuptools]
packages = ["planet", "planet.shell", "planet.vendor"]
py-modules = ["admin_cb", "expunge", "favicon", "publish", "spider", "splice"]
