[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "venus"
version = "0.1.0"
description = "Planet feed aggregator and static site generator"
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"
authors = [
  { name = "Venus contributors" }
]
dependencies = [
  "feedparser>=6,<7",
  "html5lib>=1.1,<2",
]

[tool.setuptools]
packages = ["planet", "planet.shell"]
py-modules = ["admin_cb", "expunge", "favicon", "publish", "spider", "splice"]
