[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "rss-aggregator"
version = "3.0.0"
description = "RSS feed aggregator"
readme = "README.md"
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"
authors = [
  { name = "Venus contributors" }
]
dependencies = [
  "feedparser>=6,<7",
  "html5lib>=1.1,<2",
]

[project.scripts]
rss-aggregator = "planet:main"

[dependency-groups]
dev = [
  "pytest>=8,<9",
  "pytest-cov>=6,<7",
]

[tool.setuptools]
packages = ["src", "src.shell"]
py-modules = ["planet"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
